<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/keyText" />

            <EditText
                android:id="@+id/editTextKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ekeyText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/text1" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etext1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/text2" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etext2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <EditText
                android:id="@+id/textViewM1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                 />
            <EditText
                android:id="@+id/textViewM2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                />
            <EditText
                android:id="@+id/textViewM3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                />
            <EditText
                android:id="@+id/textViewM4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                />
            <EditText
                android:id="@+id/textViewM5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                />


        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button3"/>






    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>